feat: Adding icons runtime generator

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 		<meta name="format-detection" content="address=no">
 		<meta name="format-detection" content="date=no">
 		<meta name="copyright" content="© Realize, LLC">
-		<title></title>
+		<title>Сегодня на кранах</title>
 		<link rel="stylesheet" href="/app/index.css">
 	</head>
 	<body>
