--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru" prefix="og: http://ogp.me/ns#">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Сегодня на кранах</title>
-		<link rel="stylesheet" href="/app/index.css">
-	</head>
-	<body>
-		<div id="root"></div>
-		<script src="/app/bundle.js"></script>
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Сегодня на кранах</title>
+	<link rel="stylesheet" href="./index.css">
+</head>
+
+<body>
+	<div id="root"></div>
+	<script src="./bundle.js"></script>
+</body>
+
 </html>
